<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sky Data</string>
    <string name="app_version">Ver. 1.00</string>
     <string name="release_date">Updated: February 2015</string>
    <string name="exit_app">Exit</string>
    <string name="about_app">About Sky Data</string>
    <string name="share_screen">Share screenshot</string>
    <string name="title_section1">Airport Weather</string>
    <string name="title_section2">Arriving Flights</string>
    <string name="title_section3">Departing Flights</string>
    <string name="loading_msg">Loading&#8230;</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="weather_input_field">Airport ICAO</string>
    <string name="show_weather_button">SHOW</string>
    <string name="temperature">Temperature:</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="clouds">Clouds:</string>
    <string name="visibility">Visibility:</string>
    <string name="wind">Wind:</string>
    <string name="not_available">N/A</string>
    <string name="dew_point">Dew Point:</string>
    <string name="obscurations">Obscurations:</string>
    <string name="obscurations_level">NONE</string>
    <string name="report_time_ttl">Report time:</string>
    <string name="taf_report">TAF Report:</string>
    <string name="preloader_title">Loding data....</string>
    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="ok_btn">Got it!</string>
    <string name="ok_thx_btn">OK thanks!</string>
    <string name="found_airports_title">CLOSEST AIRPORTS:</string>
    <string name="found_airports_cancel_button">Need another one</string>
    <string name="text">Text</string>
    <string name="clear_sky">CLEAR SKY</string>
    <string name="airport_not_found">AIRPORT NOT FOUND</string>
    <string name="map_clouds">Clouds</string>
    <string name="map_precipitation">Precipitations</string>
    <string name="map_pressure">Pressure</string>
    <string name="map_winds">Wind Speed</string>
    <string name="map_snow">Snow</string>
    <string name="arrivals_title">ARRIVING FLIGHTS</string>
    <string name="departures_title">DEPARTING FLIGHTS</string>
    <string name="flight_num">Flight:</string>
    <string name="flight_from">From</string>
    <string name="flight_to">To:</string>
    <string name="airport">Airport:</string>
    <string name="scheduled_arrival">Scheduled:</string>
    <string name="estimating_arrival">ETA:</string>
    <string name="flight_status">Status:</string>
    <string name="landed">Landed</string>
    <string name="terminal">Terminal:</string>
    <string name="gate">Gate:</string>
    <string name="minutes_late">min. late</string>
    <string name="no_flight_location">Flight position data unavailable!</string>
    <string name="flight_on_time">On Time</string>
    <string name="flight_departed">Departed</string>
    <string name="flight_delayed">Delayed</string>
	<string name="departed_flight_min">min.</string>
	<string name="hours_short">h</string>
	<string name="departing_airline_name">Airline:</string>
	<string name="time">Time:</string>
	<string name="departure_airp">Departure:</string>
	<string name="arrival_airp">Arrival:</string>
	<string name="location">Location:</string>
	<string name="airplane">Airplane:</string>
	<string name="flight_duration">Duration:</string>
</resources>