<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.skydata.MainActivity" >
    
    <item
        android:id="@+id/about_app"
        android:showAsAction="never"
        android:orderInCategory="1"
        android:title="@string/about_app"
        android:icon="@drawable/ic_drawer"/>

    <item
        android:id="@+id/shutdown"
        android:showAsAction="never"
        android:title="@string/exit_app"
        android:orderInCategory="10"
        android:icon="@drawable/close_app_btn"/>
    
 	<item
        android:id="@+id/share_screen"
        android:showAsAction="never"
        android:orderInCategory="2"
        android:title="@string/share_screen"
        android:icon="@drawable/ic_drawer"/>
 
</menu>