<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="10dp"
    android:paddingBottom="20dp"
    android:background="@drawable/dialog_shape_rounded" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_connection"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/text_dialog_size"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/text_color_red" />

    <ImageView
        android:id="@+id/noConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/icon_no_internet_connection" />

    <Button
        android:id="@+id/dialogCose"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/ok_btn"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:textColor="@color/logo_red_darker"
        android:background="@drawable/button_states_styles" />

</LinearLayout>
