<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:paddingLeft="10dp"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/airlineLogo"
        android:layout_width="70dp"
        android:layout_gravity="center_vertical"
        android:layout_height="60dp"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/airline_placeholder" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="@dimen/text_cell_padding"
        android:paddingRight="@dimen/text_cell_padding" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:paddingTop="2dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:src="@drawable/flight_number_icon" />

            <TextView
                android:id="@+id/flightNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="@dimen/text_cell_padding"
                android:textStyle="bold"
                android:text="TextView"
                android:textColor="@color/text_color_orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/text_cell_padding"
                android:text="@string/flight_from"
                android:textColor="@color/text_color_gray" />

            <TextView
                android:id="@+id/cityOrigin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/text_cell_padding"
                android:singleLine="true"
                android:text="TextView"
                android:textColor="@color/text_color_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="@dimen/text_cell_padding"
                android:paddingLeft="@dimen/text_cell_padding"
                android:text="@string/scheduled_arrival"
                android:textColor="@color/text_color_gray" />

            <TextView
                android:id="@+id/scheduledTime"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textColor="@color/text_color_gray" />


        </LinearLayout>
        
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            
             <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/text_cell_padding"
                android:paddingRight="@dimen/text_cell_padding"
                android:text="@string/estimating_arrival"
                android:textColor="@color/text_color_gray" />

            <TextView
                android:id="@+id/currentTime"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textColor="@color/text_color_gray" />
            
             </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/text_cell_padding"
                android:paddingRight="@dimen/text_cell_padding"
                android:text="@string/flight_status"
                android:textColor="@color/text_color_gray" />

            <ImageView
                android:id="@+id/statusIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/arrive_ontime_image_tablet" />

            <TextView
                android:id="@+id/flightRemark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/text_cell_padding"
                android:paddingRight="@dimen/text_cell_padding"
                android:text="TextView"
                android:textColor="@color/text_color_gray" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/showPlanePosition"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/app_name"
                android:background="@drawable/button_show_plane_location" />

            <ImageButton
                android:id="@+id/shareFlight"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="25dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/app_name"
                android:background="@drawable/button_share_grey" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>